syntax = "proto3";

package pb;

import "numbers_msg.proto";

option go_package = "./pb";


service ArithmeticService{
    rpc GetAddition(Operands) returns (Answer){}
    rpc GetMultiplication(Operands) returns (Answer){}
    rpc GetDivision(Operands) returns (Answer){}
    rpc GetSubstraction(Operands) returns (Answer){}
}
